# BGE_app

./: Dockerfile  README.md  app.py  project.py  pyproject.toml  requirements.txt
instance/: eggs.db
recipe_data/: orm_transfer.py  recipes.txt
static/: styles.css  styles.css.map  styles.scss
templates/: browse.html  dashboard.html  index.html  layout.html  navbar.html  results.html
tests/: test_funtional.py  test_units.py
