[project]
name = "BGE_app"
version = "1.0.0"
description = "A web app to organize your Big Green Egg for cooking"
dependencies = [
    "blinker==1.9.0",
    "cachelib==0.13.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "flask==3.1.1",
    "flask-scss==0.5",
    "flask-session==0.8.0",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.2.3",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "msgspec==0.19.0",
    "pyscss==1.4.0",
    "pytest>=9.0.2",
    "six==1.17.0",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.14.0",
    "werkzeug==3.1.3",
]
license = "MIT"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
